--- a/P000164.opf/meta.yml
+++ b/P000164.opf/meta.yml
@@ -1,15 +1,17 @@
-ebook_metadata:
+id: P000164
+initial_creation_type: ebook
+source_metadata:
   title: ᨌ། །བླ་མའི་ཐུགས་སྒྲུབ་རྡོ་རྗེ་དྲག་རྩལ་ལས་ཞལ་གདམས་ལམ་རིམ་ཡེ་ཤེས་སྙིང་པོའི་འགྲེལ་ཡེ་ཤེས་སྣང་བ་རབ་ཏུ་རྒྱས་པ་ཞེས་བྱ་བ་བཞུགས་སོ།
     །
   authors:
   - མཛད་པ་པོ། འཇམ་མགོན་ཀོང་སྤྲུལ་ཡོན་ཏན་རྒྱ་མཚོ།
-  sku: KN-LYN-01
   layers:
   - book_title
   - author
   - tsawa
   - quotation
   - sabche
+  id: KN-LYN-01
 web_metadata:
   title:
     en: The Light of Wisdom:A Commentary on Lamrim Yeshe Nyingpo, Gradual Path of
