layers filename capitalized

--- a/P000164.opf/layers/v001/BookTitle.yml
+++ b/P000164.opf/layers/v001/BookTitle.yml
@@ -1,5 +1,5 @@
 id: d17873025e2d4993acf2f4e6a7bc3b2a
-annotation_type: book_title
+annotation_type: BookTitle
 revision: '00001'
 annotations:
 - span:
