--- a/P000164.opf/layers/v001/Tsawa.yml
+++ b/P000164.opf/layers/v001/Tsawa.yml
@@ -1,5 +1,5 @@
 id: 9a18b0cd7442401dac66fd5e57627ea2
-annotation_type: tsawa
+annotation_type: Tsawa
 revision: '00001'
 annotations:
 - id: 589ffae0a8d34611bf2d20f9eb55d001
