--- a/P000164.opf/layers/v001/Sabche.yml
+++ b/P000164.opf/layers/v001/Sabche.yml
@@ -1,5 +1,5 @@
 id: f4b84048e95e441b99fbd41edba12528
-annotation_type: tsawa
+annotation_type: Tsawa
 revision: '00001'
 annotations:
 - id: 4fcf2cb8d2664519a5da99d7d144fba3
