--- a/P000164.opf/layers/v001/Quotation.yml
+++ b/P000164.opf/layers/v001/Quotation.yml
@@ -1,5 +1,5 @@
 id: 6a25de449119497fbad30c70de787fed
-annotation_type: Tsawa
+annotation_type: Quotation
 revision: '00001'
 annotations:
   4b3cebbe3e7f49d78f7db36c002ed1db:
