--- a/P000164.opf/meta.yml
+++ b/P000164.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P000164
 initial_creation_type: ebook
+created_at: 31/01/2020
+last_modified_at: 25/11/2021
 source_metadata:
   title: ᨌ། །བླ་མའི་ཐུགས་སྒྲུབ་རྡོ་རྗེ་དྲག་རྩལ་ལས་ཞལ་གདམས་ལམ་རིམ་ཡེ་ཤེས་སྙིང་པོའི་འགྲེལ་ཡེ་ཤེས་སྣང་བ་རབ་ཏུ་རྒྱས་པ་ཞེས་བྱ་བ་བཞུགས་སོ།
     །
